--- a/privacy.html
+++ b/privacy.html
@@ -1,3 +1,4 @@
+<head/>
 SLICED CIRCLE PRIVACY POLICY
 
 By Privacy Policy, we mean the way we collect, use and disclose any information we collect from our users.
@@ -39,3 +40,4 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 
 
 This document was last updated on Jule 08, 2019
+</head>
