--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<head/>
-SLICED CIRCLE PRIVACY POLICY
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="Privacy" content="The HTML5 theme">
+  <meta name="sliced-circle" content="sliced-circle">
+  <p>
+    SLICED CIRCLE PRIVACY POLICY
 
 By Privacy Policy, we mean the way we collect, use and disclose any information we collect from our users.
 
@@ -40,4 +49,12 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 
 
 This document was last updated on Jule 08, 2019
+  </p>
+
+
+
 </head>
+
+<body>
+</body>
+</html>
