--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+     <link rel="stylesheet" href="style.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>SLICED CIRCLE PRIVACY POLICY!</h1>
+<div class= "content">
+      <h1>SLICED CIRCLE PRIVACY POLICY!</h1>
     <p>
       
 
@@ -55,6 +56,7 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 
 This document was last updated on Jule 08, 2019
     </p>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
