--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-<div class= "content">
+<div class= "container">
       <h1>SLICED CIRCLE PRIVACY POLICY!</h1>
     <p>
       
