--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <div class= "container">
   <br>
   <br>
+  <br>
+  <br>
       <h1>SLICED CIRCLE PRIVACY POLICY!</h1>
     <p>
       
@@ -30,7 +32,7 @@ Our some games using microphone input by gameplay mechanic. We collect this data
       <br>
       <br>
 
-Non-personal identification information
+<b>Non-personal identification information</b>
       <br>
 We may collect non-personal identification information from our users. This kind of information in mainly technical (Such as the browser's brand, the type of device, the Internet provider ...) and does not include personal details.
       <br>
@@ -38,7 +40,8 @@ Personal identification information
       <br>
 We may collect and use personal identification information from our users, whenever they connect to our services.
       <br><br>
-Web browser cookies
+<b>Web browser cookies</b>
+
       <br>
 We may use "cookies" to enhance our users' experience. Also, this allow us to track some information and keep some record of it on the users' browsers. Users always have the choice to set up their device in order to refuse cookies.
       <br><br>
