--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 This document was last updated on Jule 08, 2019
       <br>
     </p>
+<b>Copyright © 2019 Sliced Circle - All rights reserved</b>
 </div>
 
     <!-- Optional JavaScript -->
