--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <br>
   <br>
   <br>
-      <h1>SLICED CIRCLE PRIVACY POLICY!</h1>
+  
+      <h1 class="text-center">SLICED CIRCLE PRIVACY POLICY!</h1>
     <p>
       
 
@@ -71,7 +72,7 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 This document was last updated on Jule 08, 2019
       <br>
     </p>
-<b>Copyright © 2019 Sliced Circle - All rights reserved</b>
+<b class="text-center">Copyright © 2019 Sliced Circle - All rights reserved</b>
 </div>
 
     <!-- Optional JavaScript -->
