--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@ If you have any questions about this Privacy Policy, please contact us at sliced
 
 This document was last updated on Jule 08, 2019
       <br>
+      <br>
+      <br>
+      <br>
     </p>
-<b class="text-center">Copyright © 2019 Sliced Circle - All rights reserved</b>
+<p class="text-center">Copyright © 2019 Sliced Circle - All rights reserved</p>
+  <br>
+  <br>
 </div>
 
     <!-- Optional JavaScript -->
